#6 [fix] rubocopでの指摘を受け、flashメッセージの記載の仕方を修正

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,4 +1,8 @@
 ja:
+  users:
+    sessions:
+      guest_sign_in:
+        success: ゲストユーザーとしてログインしました
   activerecord:
     attributes:
       user:
