#6 [fix] 日本語のアラートメッセージをja.ymlファイルに記載

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -3,6 +3,9 @@ ja:
     sessions:
       guest_sign_in:
         success: ゲストユーザーとしてログインしました
+    registrations:
+      destroy:
+        alert: ゲストユーザーは削除できません
   activerecord:
     attributes:
       user:
