--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -4,8 +4,10 @@ ja:
       guest_sign_in:
         success: ゲストユーザーとしてログインしました
     registrations:
+      update:
+        update_alert: ゲストユーザーの更新はできません
       destroy:
-        alert: ゲストユーザーは削除できません
+        destroy_alert: ゲストユーザーは削除できません
   activerecord:
     attributes:
       user:
