#12 [update] 日記の編集、更新が出来るようにした

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -17,6 +17,9 @@ ja:
     create:
       diary_new_notice: 日記を投稿しました
       diary_new_alert: 日記の投稿に失敗しました
+    update:
+      diary_update_notice: 日記を編集しました
+      diary_update_alert: 日記の編集に失敗しました
   activerecord:
     attributes:
       user:
