#12 [fix] 抜けていた文字を追加

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -12,7 +12,7 @@ ja:
     update:
       update_alert: ゲストユーザーの更新はできません
       profile_update_notice: プロフィールを更新しました
-      profile_update_alert: ロフィールの更新に失敗しました
+      profile_update_alert: プロフィールの更新に失敗しました
   diaries:
     create:
       diary_new_notice: 日記を投稿しました
